2025-08-30T00:49:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17337204030 # 751
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-30
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 612 1006 / 626 1020
* notice: next accum: outdated-unq outdated-all / unq all: 613 1007 / 627 1021
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-15] / [2025-08-29]

2025-08-29T00:52:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17311605081 # 750
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-29
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 611 1005 / 625 1019
* notice: next accum: outdated-unq outdated-all / unq all: 612 1006 / 626 1020
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-14] / [2025-08-28]

2025-08-28T00:52:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17282544455 # 749
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 610 1004 / 624 1018
* notice: next accum: outdated-unq outdated-all / unq all: 611 1005 / 625 1019
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-13] / [2025-08-27]

2025-08-27T00:53:20Z: