@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-30T00:49:45Z",
-  "count_outdated" : 1007,
-  "uniques_outdated" : 613,
-  "count" : 1021,
-  "uniques" : 627,
+  "timestamp" : "2025-08-31T00:56:40Z",
+  "count_outdated" : 1008,
+  "uniques_outdated" : 614,
+  "count" : 1022,
+  "uniques" : 628,
   "clones" : [
-    {
-      "timestamp": "2025-08-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-17T00:00:00Z",
       "count": 2,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-08-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
