@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-08-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-17T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-08-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
