@@ -1,3 +1,12 @@
+2025-08-31T00:56:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17350593743 # 752
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-31
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 613 1007 / 627 1021
+* notice: next accum: outdated-unq outdated-all / unq all: 614 1008 / 628 1022
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-16] / [2025-08-30]
+
 2025-08-30T00:49:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17337204030 # 751
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-30
